--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
     background-color: aqua;
     height: 100vh;
-    background-image: url("");
+    width: 100%;
     font-family: 'Josefin Sans', sans-serif;}
 
 header {
@@ -18,67 +18,88 @@ header {
 .headerLogo {
     width: 750px;
     display: inline-flex;
-    /* border: 2px outset #696969; */
-    border-radius: 75px;
-    /* box-shadow: 5px 10px; */
+    
 }
 
 #cubes {
-    width: 200px;
+    width: 125px;
 }
 
 header h1 {
     font-size: 75px;
     font-family: 'Concert One', cursive;
     letter-spacing: 20px;
+    margin-left: -.25em;
 }
 
 .mainContainer {
     display: flex;
     flex-wrap: wrap;
-    flex;
     height: 100vh;
-    padding: 2em;
+    width: 75%;
+    padding: 0.5em;
+} 
+
+.card {
+margin: 100px auto 0;
+width: 400px;
+height: 550px;
+perspective: 1000px;
 }
 
-.coinCategories {
-    width: 500px;
-    height: 350px;
-    padding: 1em;
-    border: 1px solid black;
+.card__inner {
+width: 100%;
+height: 100%;
+transition: transform 1s;
+transform-style: preserve-3d;
+cursor: pointer;
+position: relative;
 }
 
-#adaImage {
-    width: 400px;
-    display: block;
+.card__inner.is-flipped {
+transform: rotateY(180deg);
 }
 
-
-/* // for animation cards: */
-
-.animation {
-    border: 1px solid black;
-    display: flex;
-    padding: 2em;justify-content: space-around;
+.card__face {
+position: absolute;
+width: 100%;
+height: 100%;
+-webkit-backface-visibility: hidden;
+backface-visibility: hidden;
+overflow: hidden;
+border-radius: 16px;
+box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
 }
 
-#a1 {
-    position: absolute;
-    background-color: red;
+.card__face--front {
+background-image: linear-gradient(to bottom right, yellow, orange);
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.card__header {
+position: relative;
+padding: 30px 30px 40px;
+}
+
+.card__header:after {
+content: '';
+display: block;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-image: linear-gradient(to bottom left, orangered 10%, whitesmoke 115%);
+z-index: -1;
+border-radius: 0px 0px 50% 0px;
+}
+
+.pp {
     width: 300px;
-    height: 150px;
 }
 
-#a2 {
-    position: relative;
-    background-color: blue;
-    width: 400px;
-    height: 250px;
-}
 
-#a3 {
-    position: relative;
-    background-color: purple;
-    width: 500px;
-    height: 350px;
-}
+
+
